--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <nav class="navbar navbar-light navbar-expand-lg py-4">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-primary fw-bold mb-0">Kumara<span class="text-dark">Guru</span> </h1>
+                    <h1 class="title-first fw-bold fs-2 mb-0">Kumara <span class="text-dark title-last">Guru</span> </h1>
                 </a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -79,9 +79,10 @@
                     <h4 class="display-1 mb-2 animated bounceInDown fs-5">Hey, I'm</h4>
                     <h4 class="display-1 mb-2 animated bounceInDown fs-2">Kumara Guru</h4>
                     <h4 class="display-1 mb-4 animated bounceInDown fs-3">Web Developer</h4>
-                    <a href="./js/CV file.pdf" id="download-link" download="CV file.pdf"
-                        class="btn btn-primary border-0 rounded-pill py-3 px-1 px-md-5 me-3 animated bounceInLeft">Download
-                        CV</a>
+                    <a href="./js/CV file.pdf"
+                        class="btn btn-primary border-0 rounded-pill py-3 px-1 px-md-5 me-3 animated bounceInLeft"
+                        target="_blank" onclick="downloadCV()">Download CV</a>
+
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <img src="img/myimage.jpeg" class="img-fluid rounded animated zoomIn" alt="">
@@ -309,9 +310,9 @@
                                     <h4 class="mb-3">Food Order Management</h4>
                                     <p class="mb-4">Front End</p>
                                     <a href="https://github.com/kumaragurumkce/kumswithfoodie"
-                                        class="btn btn-primary px-4 py-2 rounded-pill mb-1">GitHub</a>
+                                    target="_blank"  class="btn btn-primary px-4 py-2 rounded-pill mb-1">GitHub</a>
                                     <a href="https://kumaragurumkce.github.io/kumswithfoodie/"
-                                        class="btn btn-primary px-4 py-2 rounded-pill">Live Demo</a>
+                                    target="_blank"   class="btn btn-primary px-4 py-2 rounded-pill">Live Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -324,9 +325,13 @@
                                     <h4 class="mb-3">Online Dress Shopping</h4>
                                     <p class="mb-4">Front End</p>
                                     <a href="https://github.com/kumaragurumkce/Realshopping"
-                                        class="btn btn-primary px-4 py-2 rounded-pill mb-1">GitHub</a>
-                                    <a href="https://kumaragurumkce.github.io/Realshopping/"
-                                        class="btn btn-primary px-4 py-2 rounded-pill">Live Demo</a>
+                                    target="_blank"
+                                    class="btn btn-primary px-4 py-2 rounded-pill mb-1">GitHub</a>
+                                 
+                                 <a href="https://kumaragurumkce.github.io/Realshopping/"
+                                    target="_blank"
+                                    class="btn btn-primary px-4 py-2 rounded-pill">Live Demo</a>
+                                 
                                 </div>
                             </div>
                         </div>
@@ -351,13 +356,13 @@
                         <div class="d-flex align-items-center justify-content-evenly">
                             <div class=" fs-4">
                                 <a href="mailto:kumaragururf123@gmail.com"><img src="./img/gmail.png"
-                                        class="contact-site me-3" alt=""><span
+                                    target="_blank"    class="contact-site me-3" alt=""><span
                                         class="mb-3 text-lowercase">kumaragururf123@gmail.com</span></a>
                             </div>
                             <div>
                                 <a href="https://www.linkedin.com/in/kumaragurup/">
                                     <img src="./img/linkedin.png" class="contact-site me-3" alt=""><span
-                                        class="mb-3 fs-5">LinkedIn</span>
+                                    target="_blank"    class="mb-3 fs-5">LinkedIn</span>
                                 </a>
                             </div>
                         </div>
@@ -375,13 +380,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><a href="#">Copyright <i class="fas fa-copyright text-light me-2"></i> 2024 Kumara Guru</a>, All right reserved.</span>
+                    <span class="text-light"><a href="#">Copyright <i class="fas fa-copyright text-light me-2"></i> 2024
+                            Kumara Guru</a>, All right reserved.</span>
                 </div>
                 <div class="col-md-7  text-center text-white">
-                        <a href="#about-section" class="nav-item me-3">About</a>
-                        <a href="#experience-section" class="nav-item me-3">Experience</a>
-                        <a href="#project-section" class="nav-item me-3">Project</a>
-                        <a href="#contact-section" class="nav-item me-3">Contact</a>
+                    <a href="#about-section" class="nav-item me-3">About</a>
+                    <a href="#experience-section" class="nav-item me-3">Experience</a>
+                    <a href="#project-section" class="nav-item me-3">Project</a>
+                    <a href="#contact-section" class="nav-item me-3">Contact</a>
                 </div>
             </div>
         </div>
@@ -406,11 +412,15 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script>
-        // Optionally, you can use the following JavaScript code to open the PDF in a new tab/window
-        document.getElementById('download-link').addEventListener('click', function (event) {
-            event.preventDefault(); // Prevent the default behavior (download)
-            window.open(this.href, '_blank');
-        });
+        function downloadCV() {
+            // Assuming CV file.pdf is in the same directory as the HTML file
+            var downloadLink = document.createElement('a');
+            downloadLink.href = './js/CV file.pdf'; // Corrected path
+            downloadLink.download = 'CV file.pdf';
+            document.body.appendChild(downloadLink);
+            downloadLink.click();
+            document.body.removeChild(downloadLink);
+        }
     </script>
 </body>
 
