--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
                     <small
                         class="d-inline-block fw-bold fs-5 text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About
-                        Us</small>
+                    </small>
                     <p class="text-dark">Hello, I'm Kumara, a devoted Web Developer with a strong passion for creating
                         dynamic and user-centric online solutions. I specialize in crafting seamless web experiences
                         through a blend of coding expertise and creative insight. Committed to staying on the cutting
