--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ With experience in Japanese communication and working on Japanese websites, I en
                             </div>
                             <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.8s">
                                 <div class="menu-item d-flex align-items-center">
-                                    <img class="flex-shrink-0 img-fluid rounded-circle skill-img" src="img/Github.svg"
+                                    <img class="flex-shrink-0 img-fluid rounded-circle skill-img" src="./github.jpg"
                                         alt="">
                                     <div class="w-100 d-flex flex-column text-start ps-4">
                                         <div
@@ -296,7 +296,7 @@ With experience in Japanese communication and working on Japanese websites, I en
                            
                             <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.8s">
                                 <div class="menu-item d-flex align-items-center">
-                                    <img class="flex-shrink-0 img-fluid rounded-circle skill-img" src="img/nodejs.png"
+                                    <img class="flex-shrink-0 img-fluid rounded-circle skill-img" src="./GTM.png"
                                         alt="">
                                     <div class="w-100 d-flex flex-column text-start ps-4">
                                         <div
